k8s/base/service-gzweb.yaml
apiVersion: v1
kind: Service
metadata:
  name: gzweb
  namespace: robot-demo
  labels:
    app: gazebo-sim
    app.kubernetes.io/name: robot-demo
spec:
  selector:
    app: gazebo-sim
  ports:
    - name: gzweb
      port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
