k8s/base/service-rviz.yaml
apiVersion: v1
kind: Service
metadata:
  name: robot-viz
  namespace: robot-demo
  labels:
    app: robot-viz
    app.kubernetes.io/name: robot-demo
spec:
  selector:
    app: robot-viz
  ports:
    - name: novnc
      port: 6080
      targetPort: 6080
      protocol: TCP
  type: ClusterIP
