k8s/base/route-gzweb.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gzweb
  namespace: robot-demo
  labels:
    app: gazebo-sim
    app.kubernetes.io/name: robot-demo
spec:
  to:
    kind: Service
    name: gzweb
    weight: 100
  port:
    targetPort: gzweb
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
