k8s/base/route-novnc.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: novnc
  namespace: robot-demo
  labels:
    app: gazebo-sim
    app.kubernetes.io/name: robot-demo
spec:
  to:
    kind: Service
    name: novnc
    weight: 100
  port:
    targetPort: novnc
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
